FEE-790: Unable to determine why the clipping occurs, but slightly increasing the size of the spinner seemed to alleviate the issue

--- a/src/indeterminate-progress/_indeterminate-progress.scss
+++ b/src/indeterminate-progress/_indeterminate-progress.scss
@@ -6,6 +6,7 @@ $progress-label-font: normal #{$progress-label-font-size}/1em Arial, sans-serif;
 $progress-spinner-dimensions: 60px;
 $progress-spinner-dimensions-large: 80px;
 $progress-spinner-dimensions-small: 25px;
+$progress-spinner-dimensions-small-ie: 28px;
 $progress-spinner-gutter: 5px;
 
 $progress-backdrop-color_luna: rgba(255, 255, 255, 0.85);
@@ -88,6 +89,9 @@ $progress-backdrop-color_pulsar: rgba(255, 255, 255, 0.85);
 
     &.small {
       @include indeterminateProgressPosition($progress-spinner-dimensions-small);
+      @include for("IE10+") {
+        @include indeterminateProgressPosition($progress-spinner-dimensions-small-ie);
+      }
 
       .indeterminate-progress-label {
         display: none; // UXD spec says not to show this for small spinners
